--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">entrance_guard</string>
     <string name="notice_title">最新公告</string>
+
+    <string name="arad_newUpdateAvailable">发现新版本</string>
+    <string name="arad_dialogPositiveButton">立即下载</string>
+    <string name="arad_dialogNegativeButton">以后再说</string>
+    <string name="arad_app_no_new_update">没有发现新版本</string>
+    <string name="arad_download_progress">正在下载:%1$d%%</string>
+    <string name="arad_download_success">下载完成，点击安装</string>
 </resources>
